--- a/modules/openy_features/openy_node/modules/openy_node_campaign/config/install/field.field.node.campaign.field_utilization_activities.yml
+++ b/modules/openy_features/openy_node/modules/openy_node_campaign/config/install/field.field.node.campaign.field_utilization_activities.yml
@@ -16,8 +16,8 @@ field_name: field_utilization_activities
 entity_type: node
 bundle: campaign
 label: 'Utilization activities'
-description: 'Select user activities, which user should do for attending the campaign'
-required: true
+description: ''
+required: false
 translatable: false
 default_value: {  }
 default_value_callback: ''
