--- a/modules/openy_features/openy_node/modules/openy_node_campaign/config/install/core.entity_view_display.node.campaign.default.yml
+++ b/modules/openy_features/openy_node/modules/openy_node_campaign/config/install/core.entity_view_display.node.campaign.default.yml
@@ -2,6 +2,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.node.campaign.field_activities_options
     - field.field.node.campaign.field_campaign_age_maximum
     - field.field.node.campaign.field_campaign_age_minimum
     - field.field.node.campaign.field_campaign_branches
@@ -22,10 +23,9 @@ dependencies:
     - field.field.node.campaign.field_campaign_prizes
     - field.field.node.campaign.field_campaign_reg_end_date
     - field.field.node.campaign.field_campaign_reg_start_date
-    - field.field.node.campaign.field_campaign_registration_goal
     - field.field.node.campaign.field_campaign_start_date
+    - field.field.node.campaign.field_campaign_stream_type
     - field.field.node.campaign.field_campaign_timezone
-    - field.field.node.campaign.field_campaign_utilization_goal
     - field.field.node.campaign.field_campaign_winners_prizes
     - field.field.node.campaign.field_error_default
     - field.field.node.campaign.field_error_member_is_inactive
@@ -48,7 +48,6 @@ dependencies:
     - field.field.node.campaign.field_token_check_back_date
     - field.field.node.campaign.field_token_login_link_text
     - field.field.node.campaign.field_token_register_link_text
-    - field.field.node.campaign.field_utilization_activities
     - field.field.node.campaign.field_ways_to_earn_entries
     - node.type.campaign
   module:
@@ -215,14 +214,6 @@ content:
       link: ''
     third_party_settings: {  }
     region: content
-  field_campaign_registration_goal:
-    weight: 145
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
   field_campaign_start_date:
     weight: 108
     label: above
@@ -239,14 +230,6 @@ content:
     third_party_settings: {  }
     type: basic_string
     region: content
-  field_campaign_utilization_goal:
-    weight: 146
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
   field_campaign_winners_prizes:
     type: entity_reference_revisions_entity_view
     weight: 133
@@ -255,16 +238,6 @@ content:
       view_mode: default
       link: ''
     third_party_settings: {  }
-    region: content
-  field_enable_visits_goal:
-    weight: 142
-    label: above
-    settings:
-      format: default
-      format_custom_false: ''
-      format_custom_true: ''
-    third_party_settings: {  }
-    type: boolean
     region: content
   field_error_default:
     weight: 126
@@ -411,13 +384,6 @@ content:
     third_party_settings: {  }
     type: string
     region: content
-  field_utilization_activities:
-    weight: 144
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    type: list_default
-    region: content
   field_ways_to_earn_entries:
     weight: 134
     label: above
@@ -426,8 +392,10 @@ content:
     type: list_default
     region: content
 hidden:
+  field_activities_options: true
   field_campaign_reg_end_date: true
   field_campaign_reg_start_date: true
+  field_campaign_stream_type: true
   field_pause_campaign: true
   field_token_register_link_text: true
   langcode: true
