--- a/modules/openy_features/openy_node/modules/openy_node_campaign/openy_node_campaign.info.yml
+++ b/modules/openy_features/openy_node/modules/openy_node_campaign/openy_node_campaign.info.yml
@@ -19,6 +19,7 @@ dependencies:
   - menu_ui
   - node
   - openy_campaign
+  - openy_campaign_reference_with_text
   - openy_loc_branch
   - openy_node_campaign_page
   - openy_node_landing
