--- a/modules/openy_features/openy_node/modules/openy_node_campaign/openy_node_campaign.features.yml
+++ b/modules/openy_features/openy_node/modules/openy_node_campaign/openy_node_campaign.features.yml
@@ -1,126 +1,1 @@
-required:
-  - core.base_field_override.node.campaign.promote
-  - core.base_field_override.node.campaign.status
-  - core.entity_form_display.node.campaign.default
-  - core.entity_form_display.paragraph.campaign_prizes.default
-  - core.entity_form_display.paragraph.campaign_winners_prizes.default
-  - core.entity_view_display.node.campaign.default
-  - core.entity_view_display.node.campaign.teaser
-  - core.entity_view_display.paragraph.campaign_prizes.default
-  - core.entity_view_display.paragraph.campaign_winners_prizes.default
-  - field.field.node.campaign.field_activities_options
-  - field.field.node.campaign.field_campaign_age_maximum
-  - field.field.node.campaign.field_campaign_age_minimum
-  - field.field.node.campaign.field_campaign_branches
-  - field.field.node.campaign.field_campaign_end_date
-  - field.field.node.campaign.field_campaign_expected_visits
-  - field.field.node.campaign.field_campaign_fitness_category
-  - field.field.node.campaign.field_campaign_game_description
-  - field.field.node.campaign.field_campaign_game_short_info
-  - field.field.node.campaign.field_campaign_game_title
-  - field.field.node.campaign.field_campaign_image
-  - field.field.node.campaign.field_campaign_membership_u_t
-  - field.field.node.campaign.field_campaign_menu
-  - field.field.node.campaign.field_campaign_pages
-  - field.field.node.campaign.field_campaign_palette
-  - field.field.node.campaign.field_campaign_payment_types
-  - field.field.node.campaign.field_campaign_prize_coefficient
-  - field.field.node.campaign.field_campaign_prize_nowin
-  - field.field.node.campaign.field_campaign_prizes
-  - field.field.node.campaign.field_campaign_reg_end_date
-  - field.field.node.campaign.field_campaign_reg_start_date
-  - field.field.node.campaign.field_campaign_registration_goal
-  - field.field.node.campaign.field_campaign_start_date
-  - field.field.node.campaign.field_campaign_stream_type
-  - field.field.node.campaign.field_campaign_timezone
-  - field.field.node.campaign.field_campaign_utilization_goal
-  - field.field.node.campaign.field_campaign_winners_prizes
-  - field.field.node.campaign.field_error_default
-  - field.field.node.campaign.field_error_member_is_inactive
-  - field.field.node.campaign.field_error_membership_id
-  - field.field.node.campaign.field_error_target_audience
-  - field.field.node.campaign.field_flip_cards_cover_image
-  - field.field.node.campaign.field_goal_check_ins_end_date
-  - field.field.node.campaign.field_goal_check_ins_start_date
-  - field.field.node.campaign.field_limit_visits_goal
-  - field.field.node.campaign.field_login_checkins_not_started
-  - field.field.node.campaign.field_login_not_registered
-  - field.field.node.campaign.field_min_visits_goal
-  - field.field.node.campaign.field_pause_campaign
-  - field.field.node.campaign.field_pause_landing_page
-  - field.field.node.campaign.field_reg_already_registered
-  - field.field.node.campaign.field_reg_checkins_not_started
-  - field.field.node.campaign.field_register_form_text
-  - field.field.node.campaign.field_successful_login
-  - field.field.node.campaign.field_successful_registration
-  - field.field.node.campaign.field_token_check_back_date
-  - field.field.node.campaign.field_token_login_link_text
-  - field.field.node.campaign.field_token_register_link_text
-  - field.field.node.campaign.field_utilization_activities
-  - field.field.node.campaign.field_ways_to_earn_entries
-  - field.field.paragraph.campaign_prizes.field_prgf_prize_amount
-  - field.field.paragraph.campaign_prizes.field_prgf_prize_description
-  - field.field.paragraph.campaign_winners_prizes.field_prgf_place
-  - field.field.paragraph.campaign_winners_prizes.field_prgf_prize_text
-  - field.field.paragraph.campaign_winners_prizes.field_prgf_prize_title
-  - field.storage.node.field_activities_options
-  - field.storage.node.field_campaign_age_maximum
-  - field.storage.node.field_campaign_age_minimum
-  - field.storage.node.field_campaign_branches
-  - field.storage.node.field_campaign_end_date
-  - field.storage.node.field_campaign_expected_visits
-  - field.storage.node.field_campaign_fitness_category
-  - field.storage.node.field_campaign_game_description
-  - field.storage.node.field_campaign_game_short_info
-  - field.storage.node.field_campaign_game_title
-  - field.storage.node.field_campaign_image
-  - field.storage.node.field_campaign_membership_u_t
-  - field.storage.node.field_campaign_menu
-  - field.storage.node.field_campaign_pages
-  - field.storage.node.field_campaign_palette
-  - field.storage.node.field_campaign_payment_types
-  - field.storage.node.field_campaign_prize_coefficient
-  - field.storage.node.field_campaign_prize_nowin
-  - field.storage.node.field_campaign_prizes
-  - field.storage.node.field_campaign_reg_end_date
-  - field.storage.node.field_campaign_reg_start_date
-  - field.storage.node.field_campaign_registration_goal
-  - field.storage.node.field_campaign_start_date
-  - field.storage.node.field_campaign_stream_type
-  - field.storage.node.field_campaign_timezone
-  - field.storage.node.field_campaign_utilization_goal
-  - field.storage.node.field_campaign_winners_prizes
-  - field.storage.node.field_error_default
-  - field.storage.node.field_error_member_is_inactive
-  - field.storage.node.field_error_membership_id
-  - field.storage.node.field_error_target_audience
-  - field.storage.node.field_flip_cards_cover_image
-  - field.storage.node.field_goal_check_ins_end_date
-  - field.storage.node.field_goal_check_ins_start_date
-  - field.storage.node.field_limit_visits_goal
-  - field.storage.node.field_login_checkins_not_started
-  - field.storage.node.field_login_not_registered
-  - field.storage.node.field_min_visits_goal
-  - field.storage.node.field_pause_campaign
-  - field.storage.node.field_pause_landing_page
-  - field.storage.node.field_reg_already_registered
-  - field.storage.node.field_reg_checkins_not_started
-  - field.storage.node.field_register_form_text
-  - field.storage.node.field_successful_login
-  - field.storage.node.field_successful_registration
-  - field.storage.node.field_token_check_back_date
-  - field.storage.node.field_token_login_link_text
-  - field.storage.node.field_token_register_link_text
-  - field.storage.node.field_utilization_activities
-  - field.storage.node.field_ways_to_earn_entries
-  - field.storage.paragraph.field_prgf_place
-  - field.storage.paragraph.field_prgf_prize_amount
-  - field.storage.paragraph.field_prgf_prize_description
-  - field.storage.paragraph.field_prgf_prize_text
-  - field.storage.paragraph.field_prgf_prize_title
-  - node.type.campaign
-  - paragraphs.paragraphs_type.campaign_prizes
-  - paragraphs.paragraphs_type.campaign_winners_prizes
-  - pathauto.pattern.campaign
-  - scheduler.settings
-  - user.role.campaign_moderator
+required: true
