--- a/modules/openy_features/openy_node/modules/openy_node_campaign/config/install/core.entity_form_display.node.campaign.default.yml
+++ b/modules/openy_features/openy_node/modules/openy_node_campaign/config/install/core.entity_form_display.node.campaign.default.yml
@@ -6,7 +6,6 @@ dependencies:
     - field.field.node.campaign.field_campaign_age_maximum
     - field.field.node.campaign.field_campaign_age_minimum
     - field.field.node.campaign.field_campaign_branch_target
-    - field.field.node.campaign.field_campaign_branches
     - field.field.node.campaign.field_campaign_end_date
     - field.field.node.campaign.field_campaign_expected_visits
     - field.field.node.campaign.field_campaign_fitness_category
@@ -30,7 +29,6 @@ dependencies:
     - field.field.node.campaign.field_campaign_timezone
     - field.field.node.campaign.field_campaign_utilization_goal
     - field.field.node.campaign.field_campaign_winners_prizes
-    - field.field.node.campaign.field_enable_visits_goal
     - field.field.node.campaign.field_error_default
     - field.field.node.campaign.field_error_member_is_inactive
     - field.field.node.campaign.field_error_membership_id
@@ -70,6 +68,10 @@ third_party_settings:
     group_target_audience_settings:
       children:
         - field_campaign_branches
+        - field_campaign_registration_goal
+        - field_campaign_utilization_goal
+        - field_utilization_activities
+        - field_campaign_branch_target
         - field_campaign_membership_u_t
         - field_campaign_payment_types
         - group_age_range
@@ -87,7 +89,7 @@ third_party_settings:
         - field_campaign_age_minimum
         - field_campaign_age_maximum
       parent_name: group_target_audience_settings
-      weight: 17
+      weight: 20
       format_type: fieldset
       format_settings:
         id: ''
@@ -274,17 +276,11 @@ content:
     type: string_textfield
     region: content
   field_campaign_branch_target:
-    weight: 61
-    settings: {  }
-    third_party_settings: {  }
     type: entity_reference_with_text_widget
+    weight: 17
     region: content
-  field_campaign_branches:
-    weight: 13
     settings: {  }
     third_party_settings: {  }
-    type: options_buttons
-    region: content
   field_campaign_end_date:
     weight: 20
     settings: {  }
@@ -337,7 +333,7 @@ content:
     type: image_image
     region: content
   field_campaign_membership_u_t:
-    weight: 14
+    weight: 18
     settings: {  }
     third_party_settings: {  }
     type: options_buttons
@@ -352,7 +348,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_campaign_payment_types:
-    weight: 15
+    weight: 19
     settings: {  }
     third_party_settings: {  }
     type: options_buttons
@@ -396,6 +392,14 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
+  field_campaign_registration_goal:
+    type: string_textfield
+    weight: 14
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
   field_campaign_start_date:
     weight: 19
     settings: {  }
@@ -414,6 +418,14 @@ content:
     third_party_settings: {  }
     type: tzfield_default
     region: content
+  field_campaign_utilization_goal:
+    type: string_textfield
+    weight: 15
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
   field_campaign_winners_prizes:
     type: entity_reference_paragraphs
     weight: 16
@@ -588,6 +600,12 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+  field_utilization_activities:
+    type: options_buttons
+    weight: 16
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   field_ways_to_earn_entries:
     weight: 54
     settings: {  }
@@ -640,9 +658,5 @@ content:
 hidden:
   field_campaign_menu: true
   field_campaign_palette: true
-  field_campaign_registration_goal: true
-  field_campaign_utilization_goal: true
-  field_enable_visits_goal: true
-  field_utilization_activities: true
   publish_on: true
   unpublish_on: true
