Update license according to dgo.to/2935137

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "ymcatwincities/openy",
     "description": "OpenY distribution",
     "type": "drupal-profile",
-    "license": "GPL-2.0+",
+    "license": "GPL-2.0-or-later",
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require-dev": {
