#595 Add entity browser for adding local video and other config updates

--- a/modules/openy_features/openy_media/modules/openy_media_local_video/config/install/core.entity_view_display.media.video_local.default.yml
+++ b/modules/openy_features/openy_media/modules/openy_media_local_video/config/install/core.entity_view_display.media.video_local.default.yml
@@ -24,6 +24,7 @@ content:
       muted: 0
     third_party_settings: {  }
     type: videojs_player_list
+    region: content
 hidden:
   created: true
   langcode: true
