--- a/modules/openy_features/openy_media/modules/openy_media_local_video/openy_media_local_video.info.yml
+++ b/modules/openy_features/openy_media/modules/openy_media_local_video/openy_media_local_video.info.yml
@@ -14,7 +14,9 @@ dependencies:
   - language
   - media_entity
   - media_entity_video
+  - openy_media
+  - path
+  - taxonomy
   - user
   - video
   - videojs
-version: 8.x-1.0
