--- a/modules/openy_features/openy_prgf/modules/openy_prgf_video_player/openy_prgf_video_player.info.yml
+++ b/modules/openy_features/openy_prgf/modules/openy_prgf_video_player/openy_prgf_video_player.info.yml
@@ -5,7 +5,9 @@ core: 8.x
 package: OpenY
 dependencies:
   - datalayer
+  - entity_browser
   - field
   - media_entity
+  - openy_media_local_video
   - paragraphs
 version: 8.x-1.1
