--- a/modules/openy_features/openy_media/modules/openy_media_local_video/config/install/core.entity_form_display.media.video_local.default.yml
+++ b/modules/openy_features/openy_media/modules/openy_media_local_video/config/install/core.entity_form_display.media.video_local.default.yml
@@ -5,6 +5,7 @@ dependencies:
     - field.field.media.video_local.field_media_local_video
     - media_entity.bundle.video_local
   module:
+    - path
     - video
 id: media.video_local.default
 targetEntityType: media
@@ -16,6 +17,7 @@ content:
     weight: 10
     settings: {  }
     third_party_settings: {  }
+    region: content
   field_media_local_video:
     weight: 11
     settings:
@@ -26,17 +28,26 @@ content:
       progress_indicator: throbber
     third_party_settings: {  }
     type: video_upload
+    region: content
   langcode:
     type: language_select
     weight: 2
     settings: {  }
     third_party_settings: {  }
+    region: content
   name:
     type: string_textfield
     weight: -5
     settings:
       size: 60
       placeholder: ''
+    third_party_settings: {  }
+    region: content
+  path:
+    type: path
+    weight: 30
+    region: content
+    settings: {  }
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
@@ -46,4 +57,5 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+    region: content
 hidden: {  }
