--- a/modules/openy_features/openy_prgf/modules/openy_prgf_video_player/config/install/core.entity_form_display.paragraph.video_player.default.yml
+++ b/modules/openy_features/openy_prgf/modules/openy_prgf_video_player/config/install/core.entity_form_display.paragraph.video_player.default.yml
@@ -2,8 +2,11 @@ langcode: en
 status: true
 dependencies:
   config:
+    - entity_browser.browser.local_video_library
     - field.field.paragraph.video_player.field_prgf_video
     - paragraphs.paragraphs_type.video_player
+  module:
+    - entity_browser
 id: paragraph.video_player.default
 targetEntityType: paragraph
 bundle: video_player
@@ -12,11 +15,16 @@ content:
   field_prgf_video:
     weight: 3
     settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+      entity_browser: local_video_library
+      field_widget_display: label
+      field_widget_edit: true
+      field_widget_remove: true
+      selection_mode: selection_append
+      open: false
+      field_widget_display_settings: {  }
     third_party_settings: {  }
-    type: entity_reference_autocomplete
+    type: entity_browser_entity_reference
+    region: content
 hidden:
   created: true
   status: true
