--- a/composer.json
+++ b/composer.json
@@ -227,6 +227,7 @@
         "drupal/lndr": "1.11",
         "doctrine/inflector": "1.1.*",
         "drupal/crop": "1.3",
-        "drupal/focal_point": "1.0-beta5"
+        "drupal/focal_point": "1.0-beta5",
+        "drupal/easy_breadcrumb": "^1.6"
     }
 }
