--- a/openy.info.yml
+++ b/openy.info.yml
@@ -96,6 +96,7 @@ dependencies:
   - lndr
   - crop
   - focal_point
+  - easy_breadcrumb
   # OpenY features.
   - openy_svg_formatter
   - openy_media_image
@@ -150,6 +151,7 @@ dependencies:
   - openy_prgf_embedded_groupexpro_schedule
   - openy_prgf_pgm_reg
   - openy_prgf_webform
+  - openy_prgf_breadcrumbs
   - openy_node_activity
   - openy_node_class
   - openy_node_session
