--- a/modules/openy_features/openy_prgf/config/install/openy_prgf.settings.yml
+++ b/modules/openy_features/openy_prgf/config/install/openy_prgf.settings.yml
@@ -9,6 +9,7 @@ fields_unset_paragraphs:
     - embedded_groupexpro_schedule
     - featured_blogs
     - featured_content
+    - featured_highlights
     - gallery
     - grid_columns
     - grid_content
@@ -17,6 +18,7 @@ fields_unset_paragraphs:
     - latest_blog_posts_camp
     - prgf_location_finder
     - prgf_location_finder_filters
+    - promo_text
     - openy_prgf_mbrshp_calc
     - membership_info
     - session_time
@@ -30,6 +32,7 @@ fields_unset_paragraphs:
     - embedded_groupexpro_schedule
     - featured_blogs
     - featured_content
+    - featured_highlights
     - grid_columns
     - grid_content
     - latest_blog_posts
