--- a/openy.info.yml
+++ b/openy.info.yml
@@ -134,7 +134,9 @@ dependencies:
   - openy_prgf_group_schedules
   - openy_prgf_story_card
   - openy_prgf_promo_card
+  - openy_prgf_promo_text
   - openy_prgf_featured_blogs
+  - openy_prgf_featured_highlights
   - openy_prgf_gallery
   - openy_prgf_teaser
   - openy_prgf_classes_listing
