#846 Updates to breadcrumbs paragraph config

--- a/modules/openy_features/openy_prgf/modules/openy_prgf_breadcrumbs/config/install/paragraphs.paragraphs_type.easy_breadcrumb.yml
+++ b/modules/openy_features/openy_prgf/modules/openy_prgf_breadcrumbs/config/install/paragraphs.paragraphs_type.easy_breadcrumb.yml
@@ -1,6 +1,6 @@
 langcode: en
 status: true
 dependencies: {  }
-id: easy_breadcrumbs
-label: 'Easy Breadcrumbs'
+id: easy_breadcrumb
+label: 'Easy Breadcrumb'
 behavior_plugins: {  }
