--- a/modules/openy_features/openy_prgf/modules/openy_prgf_breadcrumbs/config/install/core.entity_form_display.paragraph.easy_breadcrumb.default.yml
+++ b/modules/openy_features/openy_prgf/modules/openy_prgf_breadcrumbs/config/install/core.entity_form_display.paragraph.easy_breadcrumb.default.yml
@@ -4,19 +4,11 @@ dependencies:
   config:
     - field.field.paragraph.easy_breadcrumb.field_prgf_block
     - paragraphs.paragraphs_type.easy_breadcrumb
-  module:
-    - plugin
 id: paragraph.easy_breadcrumb.default
 targetEntityType: paragraph
 bundle: easy_breadcrumb
 mode: default
-content:
-  field_prgf_block:
-    weight: 0
-    settings: {  }
-    third_party_settings: {  }
-    type: 'plugin_selector:plugin_select_list'
-    region: content
+content: {  }
 hidden:
   created: true
   status: true
