--- a/modules/openy_features/openy_prgf/modules/openy_prgf_breadcrumbs/openy_prgf_breadcrumbs.info.yml
+++ b/modules/openy_features/openy_prgf/modules/openy_prgf_breadcrumbs/openy_prgf_breadcrumbs.info.yml
@@ -2,10 +2,11 @@ name: 'OpenY Paragraph Breadcrumbs'
 description: 'OpenY Paragraph Breadcrumbs'
 type: module
 core: 8.x
+package: OpenY
 dependencies:
   - datalayer
+  - easy_breadcrumb
   - field
   - openy_prgf
   - paragraphs
   - plugin
-  - easy_breadcrumb
