--- a/modules/openy_features/openy_block/modules/openy_block_featured_highlights/config/install/core.entity_view_display.block_content.featured_highlights_block.default.yml
+++ b/modules/openy_features/openy_block/modules/openy_block_featured_highlights/config/install/core.entity_view_display.block_content.featured_highlights_block.default.yml
@@ -28,7 +28,7 @@ content:
     region: content
     label: hidden
     settings:
-      view_mode: default
+      view_mode: node_blog_teaser
       link: false
     third_party_settings: {  }
   field_featured_hl_block_link:
