Issue 846 Add Breadcrumbs component (#935)
* #846 - Add easy_breadcrumb and breadcrumbs paragraph to composer and profile

* #846 - Remove already merged patch for datalayer module

* #846 - Update composer lock

* #846 Add breadcrumbs paragraph

* #846 Add style and template for breadcrumb paragraph

* #846 Updates to breadcrumbs paragraph config

* #846 Add breadcrumbs paragraph documentation

* #846 Add breadcrumb region to the openy_rose theme

* #846 Remove breadcrumbs paragraph

* #846 Import breadcrumbs block to display it in breadrumbs region

* #846 Update breadcrumb style

* #846 Remove breadcrum paragraph template and docs

* #846 Update breadcrumb style

* #846 Remove breadcrumb paragraph from profile and hook_update

* #846 update style for breadcrumb

* #846 Add behat test for breadcrumb feature

* #846 Fix typo

* #846 Move wrapper to breadcrumb block template

* #846 Fix module name

* #846 Adjust easy_breadcrumb settings

* #846 Update behat test after new settings

--- a/openy.info.yml
+++ b/openy.info.yml
@@ -96,6 +96,7 @@ dependencies:
   - lndr
   - crop
   - focal_point
+  - easy_breadcrumb
   # OpenY features.
   - openy_svg_formatter
   - openy_media_image
