--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,4 @@
-    {
+{
     "name": "ymcatwincities/openy",
     "description": "OpenY distribution",
     "type": "drupal-profile",
@@ -145,9 +145,6 @@
             "drupal/entity_embed": {
                 "2511404 - Image entities/fields embedded using Entity Embed cannot be linked in CKEditor": "https://www.drupal.org/files/issues/entity_embed_links-2511404-31.patch"
             },
-            "drupal/datalayer": {
-                "2857270 - Entity reference field selected causing Fatal Error": "https://www.drupal.org/files/issues/2857270-4-fix-entity-reference-field-using-name-property.patch"
-            },
             "drupal/plugin": {
                 "2647312 - Use SubFormState in plugin selectors": "https://www.drupal.org/files/issues/plugin_2647312_20.patch"
             },
@@ -227,6 +224,7 @@
         "drupal/lndr": "1.11",
         "doctrine/inflector": "1.1.*",
         "drupal/crop": "1.3",
-        "drupal/focal_point": "1.0-beta5"
+        "drupal/focal_point": "1.0-beta5",
+        "drupal/easy_breadcrumb": "^1.6"
     }
 }
