--- a/modules/openy_features/openy_media/modules/openy_media_local_video/config/install/entity_browser.browser.local_video_library.yml
+++ b/modules/openy_features/openy_media/modules/openy_media_local_video/config/install/entity_browser.browser.local_video_library.yml
@@ -3,16 +3,18 @@ status: true
 dependencies:
   config:
     - media_entity.bundle.video_local
+    - views.view.local_videos_library
   module:
     - dropzonejs_eb_widget
     - media_entity
+    - views
 name: local_video_library
 label: 'Local Video Library'
 display: modal
 display_configuration:
   width: '650'
   height: '500'
-  link_text: 'Select entities'
+  link_text: 'Select videos'
   auto_open: false
 selection_display: no_display
 selection_display_configuration: {  }
@@ -32,8 +34,20 @@ widgets:
       resize_quality: !!float 1
       resize_method: contain
       thumbnail_method: contain
-      submit_text: 'Select entities'
+      submit_text: 'Save entity'
+      auto_select: false
     uuid: 9fb81a40-c7ee-40b0-b8c0-b20b248590bb
     weight: -10
     label: 'Upload video'
     id: dropzonejs_media_entity
+  acc199f8-dd59-471a-a677-270e080fd9c2:
+    settings:
+      view: local_videos_library
+      view_display: local_videos_library
+      submit_text: 'Select videos'
+      auto_select: false
+    uuid: acc199f8-dd59-471a-a677-270e080fd9c2
+    weight: 2
+    label: 'All Videos'
+    id: view
+
