--- a/composer.json
+++ b/composer.json
@@ -230,7 +230,7 @@
         "drupal/focal_point": "1.0-beta5",
         "drupal/media_entity_video": "1.0-beta2",
         "drupal/video": "1.2",
-        "drupal/videojs": "1.0"
+        "drupal/videojs": "1.0",
         "drupal/easy_breadcrumb": "^1.6"
     }
 }
