[OYPD-645]: Rename Promo Text paragraph type to Secondary Description and Sidebar; Refactoring.

--- a/modules/openy_features/openy_prgf/config/install/openy_prgf.settings.yml
+++ b/modules/openy_features/openy_prgf/config/install/openy_prgf.settings.yml
@@ -17,9 +17,9 @@ fields_unset_paragraphs:
     - latest_blog_posts_camp
     - prgf_location_finder
     - prgf_location_finder_filters
-    - promo_text
     - openy_prgf_mbrshp_calc
     - membership_info
+    - secondary_description_sidebar
     - session_time
     - schedule_search_form
     - schedule_search_list
