--- a/modules/openy_features/openy_prgf/modules/openy_prgf_secondary_description_sidebar/config/install/field.storage.paragraph.field_prgf_left_column_block.yml
+++ b/modules/openy_features/openy_prgf/modules/openy_prgf_secondary_description_sidebar/config/install/field.storage.paragraph.field_prgf_left_column_block.yml
@@ -2,14 +2,15 @@ langcode: en
 status: true
 dependencies:
   module:
+    - block_content
     - paragraphs
-    - text
-id: paragraph.field_description
-field_name: field_description
+id: paragraph.field_prgf_left_column_block
+field_name: field_prgf_left_column_block
 entity_type: paragraph
-type: text_long
-settings: {  }
-module: text
+type: entity_reference
+settings:
+  target_type: block_content
+module: core
 locked: false
 cardinality: 1
 translatable: true
