--- a/openy.info.yml
+++ b/openy.info.yml
@@ -135,7 +135,7 @@ dependencies:
   - openy_prgf_group_schedules
   - openy_prgf_story_card
   - openy_prgf_promo_card
-  - openy_prgf_promo_text
+  - openy_prgf_secondary_description_sidebar
   - openy_prgf_featured_blogs
   - openy_prgf_gallery
   - openy_prgf_teaser
