[OYPD-645]: Add dependencies.

--- a/modules/openy_features/openy_prgf/modules/openy_prgf_secondary_description_sidebar/config/install/field.field.paragraph.secondary_description_sidebar.field_prgf_right_column_block.yml
+++ b/modules/openy_features/openy_prgf/modules/openy_prgf_secondary_description_sidebar/config/install/field.field.paragraph.secondary_description_sidebar.field_prgf_right_column_block.yml
@@ -14,7 +14,7 @@ third_party_settings:
   datalayer:
     expose: 0
     label: field_prgf_right_column_block
-id: paragraph.code.field_prgf_right_column_block
+id: paragraph.secondary_description_sidebar.field_prgf_right_column_block
 field_name: field_prgf_right_column_block
 entity_type: paragraph
 bundle: secondary_description_sidebar
