--- a/modules/openy_features/openy_prgf/modules/openy_prgf_secondary_description_sidebar/openy_prgf_secondary_description_sidebar.info.yml
+++ b/modules/openy_features/openy_prgf/modules/openy_prgf_secondary_description_sidebar/openy_prgf_secondary_description_sidebar.info.yml
@@ -6,5 +6,9 @@ package: OpenY
 dependencies:
   - datalayer
   - field
+  - openy_block_basic
+  - openy_block_custom_simple
+  - openy_block_date
+  - openy_code_block
   - paragraphs
   - text
