--- a/modules/openy_features/openy_prgf/modules/openy_prgf_secondary_description_sidebar/config/install/paragraphs.paragraphs_type.secondary_description_sidebar.yml
+++ b/modules/openy_features/openy_prgf/modules/openy_prgf_secondary_description_sidebar/config/install/paragraphs.paragraphs_type.secondary_description_sidebar.yml
@@ -3,3 +3,4 @@ status: true
 dependencies: {  }
 id: secondary_description_sidebar
 label: 'Secondary Description and Sidebar'
+behavior_plugins: {  }
